Migration to IntelliJ